# duckdb-rust-db-driver

./: CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: MainDistributionPipeline.yml  ci.yml  publish.yml  release-extension.yml
examples/: azure_sql_aad.rs  duckdb_query.rs  postgres_pool.rs  synapse_serverless.rs
extensions/db_driver/: description.yml
extensions/rust_db_driver/: description.yml
src/: config.rs  driver.rs  error.rs  extension.rs  lib.rs  pool.rs  row.rs
src/auth/: azure.rs  mod.rs  sql.rs
src/backends/: duckdb_backend.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs
src/vtab/: mod.rs
tests/: test_duckdb.rs  test_mssql.rs  test_mysql.rs  test_postgres.rs
