[package]
name = "db-driver"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "High-performance async Rust driver for PostgreSQL, MySQL, SQL Server, Azure SQL, Synapse and DuckDB"
license = "MIT"

[lib]
name = "db_driver"
path = "src/lib.rs"

[[example]]
name = "postgres_pool"
path = "examples/postgres_pool.rs"

[[example]]
name = "azure_sql_aad"
path = "examples/azure_sql_aad.rs"

[[example]]
name = "duckdb_query"
path = "examples/duckdb_query.rs"

[[example]]
name = "synapse_serverless"
path = "examples/synapse_serverless.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }
tracing     = "0.1"
futures     = "0.3"

# PostgreSQL
tokio-postgres    = { version = "0.7", optional = true, features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", optional = true }

# MySQL
sqlx = { version = "0.9", optional = true, default-features = false, features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "json",
] }

# SQL Server / Azure SQL / Synapse
tiberius   = { version = "0.12", optional = true, default-features = false, features = ["rustls", "chrono", "tds73"] }
tokio-util = { version = "0.7", optional = true, features = ["compat"] }
deadpool   = { version = "0.13", optional = true, features = ["managed"] }

# DuckDB
duckdb = { version = "1", optional = true, features = ["bundled", "r2d2"] }
r2d2   = { version = "0.8", optional = true }

# Azure Identity
azure_identity = { version = "1", optional = true }
azure_core     = { version = "1", optional = true }

[features]
default    = ["postgres", "mysql", "mssql", "duckdb", "azure-auth"]
postgres   = ["dep:tokio-postgres", "dep:deadpool-postgres"]
mysql      = ["dep:sqlx"]
mssql      = ["dep:tiberius", "dep:tokio-util", "dep:deadpool"]
duckdb     = ["dep:duckdb", "dep:r2d2"]
azure-auth = ["dep:azure_identity", "dep:azure_core"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
