[package]
name = "db-driver"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "DuckDB extension for querying PostgreSQL, MySQL, and SQL Server from inside DuckDB SQL"
license = "MIT"

[lib]
name = "db_driver"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "postgres_pool"
path = "examples/postgres_pool.rs"
required-features = ["postgres"]

[[example]]
name = "azure_sql_aad"
path = "examples/azure_sql_aad.rs"
required-features = ["mssql", "azure-auth"]

[[example]]
name = "synapse_serverless"
path = "examples/synapse_serverless.rs"
required-features = ["mssql", "azure-auth"]

[dependencies]
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }
tracing     = "0.1"
futures     = "0.3"

# DuckDB extension runtime (always required — this crate IS the extension)
duckdb = { version = "1", features = ["loadable-extension"] }

# PostgreSQL
tokio-postgres         = { version = "0.7", optional = true, features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres      = { version = "0.14", optional = true }
tokio-postgres-rustls  = { version = "0.12", optional = true }
rustls                 = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
webpki-roots           = { version = "1", optional = true }

# MySQL
sqlx = { version = "0.9", optional = true, default-features = false, features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "json",
] }

# SQL Server / Azure SQL / Synapse
tiberius   = { version = "0.12", optional = true, default-features = false, features = ["rustls", "chrono", "tds73"] }
tokio-util = { version = "0.7", optional = true, features = ["compat"] }
deadpool   = { version = "0.13", optional = true, features = ["managed"] }

# Azure Identity
azure_identity = { version = "1", optional = true }
azure_core     = { version = "1", optional = true }

[features]
default    = ["postgres", "mysql", "mssql", "azure-auth"]
postgres   = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:tokio-postgres-rustls", "dep:rustls", "dep:webpki-roots"]
mysql      = ["dep:sqlx"]
mssql      = ["dep:tiberius", "dep:tokio-util", "dep:deadpool"]
azure-auth = ["dep:azure_identity", "dep:azure_core"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
